Remove dependency on sun.misc.BASE64Encoder